--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="https://use.fontawesome.com/1076780e57.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100767762-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-100767762-2');
-</script>
     </head>
  
     
@@ -37,14 +28,14 @@
                                     On a mission to build safe AGI and live forever
                                 </h4>
                                 <h6>
-                                    CTO @ Pairi // CMU Machine Learning & Statistics Dropout<br><br>
+                                    CTO @ Tangram // CMU Machine Learning & Statistics Dropout<br><br>
 
                                 </h6>
                                 <span style = "font-size:22px;">
-                                    <a href = "https://github.com/alebml" class = "link1"><i class="fa fa-github" aria-hidden="true"></i></a>
-                                    <a style = "margin-left: 20px;"class = "link1"  class = "link1" href = "https://twitter.com/alebml"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <a href = "https://github.com/0x61656c" class = "link1"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                    <a style = "margin-left: 20px;"class = "link1"  class = "link1" href = "https://twitter.com/0x61656c"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                     <a style = "margin-left: 20px;" class = "link1" href = "https://linkedin.com/in/alebml"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                                    <a style = "margin-left: 20px;" class = "link1" href = "mailto:aaron@pairi.app"><i class="fa fa-envelope" aria-hidden="true"></i></a>  
+                                    <a style = "margin-left: 20px;" class = "link1" href = "mailto:0x61656c@protonmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>  
 
                                 </span>
                             </h4>
