--- a/writing/why-read.html
+++ b/writing/why-read.html
@@ -9,15 +9,6 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
         <script src="https://use.fontawesome.com/1076780e57.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100767762-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-100767762-2');
-</script>
     </head>
  
     
@@ -38,7 +29,7 @@
                     <div class = "row">
                         <div class = "col-xs-12 col-md-8 col-md-offset-2">
                         <h5 class = "copy-text">
-                            Recently, an article on the topic of long-form reading made the rounds in the Tech Entrepreneurship corner of Twitter. The author made the observation that reading books can produce smaller returns than expected because it’s difficult to remember the majority of the information put forward by the author. I found this interesting because it directly conflicts with the reason I read, and I suspect many others will feel the same way.<br><br>
+                            Recently, an article on the topic of long-form reading made the rounds in Tech Twitter. The author made the observation that reading books can produce smaller returns than expected because it’s difficult to remember the majority of the information put forward by the author. I found this interesting because it directly conflicts with the reason I read, and I suspect many others will feel the same way.<br><br>
                             When I’m reading a book, I’m usually not expecting to retain much of the source material. A strong parallel to this is learning from people. If one were to have several mentors in different fields, ask each applicable question to the appropriate mentor, and follow that advice without question, he/she would essentially be modeling an inferior function to the source. Similarly, if one were to read and reread any given book ad infinitum, the value they could gain from the information of the book is asymptotically limited by the book’s contents. Fortunately, the total value of reading is not subject to this limit and is increased substantially by the experience of reading, the ability to think critically about the content, and the enjoyment factor.<br><br>
                             The value of books, and people, and other sources of information is dependent on one’s ability to compare to and iterate on their internal model(s) of the world. I can’t remember more than a few sentences from most of the books I’ve read, but I can say with absolute certainty that I would be a significantly different person if I hadn’t been through the experience of reading those texts. I can’t remember most of the conversations I’ve had in my life, but I also can’t imagine being where I am now without having had them.<br><br>
                             When I was younger, I had a different model of why it was a good idea to read books--reading books (in particular, non-fiction) is a similar experience to living without the fluff of everyday life. By reading books, I thought one could quickly live and learn through the equivalent of many lives, without the small things. While this is still an attractive idea to me, as I’ve gotten older I’ve started to realize that much of the value of life can be found in that fluff.
