--- a/projects.html
+++ b/projects.html
@@ -9,15 +9,6 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="https://use.fontawesome.com/1076780e57.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">       
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100767762-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-100767762-2');
-</script>
     </head>
  
     
@@ -25,19 +16,13 @@
         <div class = "parent">
             <div class = "panel">
                 <div class = "container">
-                    <div class = "row">
-                        <div class = "col-xs-12 col-md-6">
-                            <div style = "margin-top: 100px;">
-                                <h1>Ordered by Impact.</h1>
-                            </div>
-                        </div>
-                    </div>
+                  
                     <div class = "row">
                         <div class = "col-xs-12 col-md-4">
                             <div class = "text-box-custom-parent">
                                 <div class = "text-box-custom-child">
                                     <a href = "https://pairi.app">
-                                        <h3>Pairi</h3>
+                                        <h3>Tangram</h3>
                                         <p>04/10/2019</p>
                                         <p>Spin up a marketplace 10x faster and cheaper. Techstars Chicago 2020.</p>
                                     </a>
